--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@
 # phone: (716) 555-5555
 
 # # homepage tiles
-# tiles-source: pages # accepts "posts" or "pages"
-# tiles-count: 6
+tiles-source: pages # accepts "posts" or "pages"
+tiles-count: 6
 
 # # social settings (key must match name of font awesome icon)
 # # see https://fontawesome.com/icons?d=gallery&p=2&s=brands
